// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingTransaction /> should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-beqWaB fhrvBG"
  >
    <div
      class="sc-gueYoa gQVSSz"
    >
      <div
        class="sc-dmqHEX jTQqpe"
      >
        <div
          class="sc-hLseeU cNNYZe"
        >
          <div
            class="chakra-spinner css-uhwdbi"
          >
            <span
              class="css-8b45rq"
            >
              Loading...
            </span>
          </div>
        </div>
        <span
          class="sc-eDDNvR ibUBCG"
        >
          Your transaction is processing...
        </span>
      </div>
    </div>
    <div
      class="sc-jTrPJq jFpeLz"
    >
      <div
        class="css-1w4130"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          class="css-1demtxk"
          data-indeterminate=""
          role="progressbar"
          style="width: 0%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<LoadingTransaction /> should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-beqWaB fhrvBG"
  >
    <div
      class="sc-gueYoa gQVSSz"
    >
      <div
        class="sc-dmqHEX jTQqpe"
      >
        <div
          class="sc-hLseeU cNNYZe"
        >
          <div
            class="chakra-spinner css-uhwdbi"
          >
            <span
              class="css-8b45rq"
            >
              Loading...
            </span>
          </div>
        </div>
        <span
          class="sc-eDDNvR ibUBCG"
        >
          Your transaction is processing...
        </span>
      </div>
    </div>
    <div
      class="sc-jTrPJq jFpeLz"
    >
      <div
        class="css-1w4130"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          class="css-1demtxk"
          data-indeterminate=""
          role="progressbar"
          style="width: 0%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<LoadingTransaction /> should render correctly 3`] = `
<DocumentFragment>
  <div
    class="sc-beqWaB fhrvBG"
  >
    <div
      class="sc-gueYoa gQVSSz"
    >
      <div
        class="sc-dmqHEX jTQqpe"
      >
        <div
          class="sc-hLseeU cNNYZe"
        >
          <svg>
            double-check.svg
          </svg>
        </div>
        <span
          class="sc-eDDNvR ibUBCG"
        >
          Yay, your transaction is complete!
        </span>
      </div>
    </div>
    <div
      class="sc-jTrPJq jFpeLz"
    >
      <div
        class="css-1w4130"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="css-1jy0d03"
          role="progressbar"
          style="width: 100%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
